--- a/trunk/sqlworkbench/src/workbench/gui/dialogs/WbAboutDialog.form
+++ b/trunk/sqlworkbench/src/workbench/gui/dialogs/WbAboutDialog.form
@@ -142,7 +142,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="builtWithNbLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;Built with NetBeans (&lt;u&gt;www.netbeans.org&lt;/u&gt;)&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;Built with NetBeans (&lt;u&gt;netbeans.apache.org&lt;/u&gt;)&lt;/html&gt;"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="builtWithNbLabelMouseClicked"/>
@@ -181,7 +181,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="homepageLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;u&gt;www.sql-workbench.net&lt;/u&gt;&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;u&gt;www.sql-workbench.eu&lt;/u&gt;&lt;/html&gt;"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="homepageLabelMouseClicked"/>
